tests/NormalTests/paczka2/big_fuzzy/30624495.err
Error in line 3: A132 A444 78,41
Error in line 1: zpDHNxTC A444 82,7
Error in line 7: A132 A132 54,7
Error in line 9: A132 A444 69,1
Error in line 22: zpDHNxTC A132 44,65
Error in line 19: zpDHNxTC A132 28,9
Error in line 16: bL6H A132 27,9
Error in line 27: vLlrkn72sX A712 73,2
Error in line 33: bL6H A712 -1,3
Error in line 36: A132 A132 63,9
Error in line 28: zpDHNxTC S685 72,3
Error in line 44: prRJVCQ3 A712 80,1
Error in line 50: A132 A712 19,0
Error in line 47: prRJVCQ3 S685 16,9
Error in line 56: prRJVCQ3 A444 47,7
Error in line 29: bL6H A712 65,1
Error in line 51: A132 S685 15,9
Error in line 54: A2PoHgpO A444 129,2
Error in line 76: A132 A132 1,3
Error in line 83: bL6H S685 19,4
Error in line 98: zpDHNxTC A444 7,0
Error in line 96: A132 A444 78,9
Error in line 105: JHInW A132 47,5
Error in line 117: prRJVCQ3 S685 33,9
Error in line 104: A2PoHgpO A132 77,7
Error in line 123: prRJVCQ3 A132 -1,5
Error in line 113: bL6H S685 1,4
Error in line 115: A132 A712 313,2
Error in line 142: A2PoHgpO A132 91,4
Error in line 146: ¶A132
Error in line 147: A132 A132 247,3
Error in line 157: A132 A444 65,2
Error in line 158: A132 A712 90,9
Error in line 171: bL6H A444 95,5
Error in line 188: A132 A132 83,3
Error in line 207: vLlrkn72sX A712 -2,3
Error in line 204: vLlrkn72sX A712 33,2
Error in line 208: vLlrkn72sX A132 89,3
Error in line 216: bL6H A712 22,9
Error in line 213: JHInW A444 35,8
Error in line 217: bL6H S685 27,5
Error in line 230: bL6H A712 92,4
Error in line 225: JHInW A712 1,3
